# foundry-x

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_BASE_2660389.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: ISSUE_GENERATION_PROMPT.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md  conftest.py  models.py  registry.py  support.py  test_skill_coverage.py  test_smoke.py  test_workspace_fixture.py
docs/: ARCHITECTURE.md  CONTEXT.md  ISSUE_GENERATION_PROMPT.md  MODEL_CONFIG.md  OPERATOR.md  PHASE3-FINDINGS.md  PHILOSOPHY.md  PRD.md  PROJECT_STATUS.md  ROADMAP.md  SECURITY.md  TUTORIAL.md
harness/: evolver_meta_prompt.txt  manifest.json  system_prompt.txt
logs/: run-sweep-rx6600xt.sh
scripts/: check_pr_closing_refs.sh  update_ideas_index.py
tests/: _harness_fixture.py  _model_fixtures.py  conftest.py  test_compose_rocm.py  test_compose_sandbox.py  test_correlation.py  test_critic.py  test_digester.py  test_dockerignore.py  test_evolution_payloads.py  test_evolution_pydantic_boundaries.py  test_evolution_store.py  test_evolver_guard.py  test_evolver_llm_benchmark_validation.py  test_evolver_pinning.py  test_execution.py  test_execution_agent_loop.py  test_execution_llamacpp_streaming.py  test_execution_token_budget.py  test_file_operation_executors.py  test_hook_isolation.py  test_humaneval_plus_loader.py  test_injection_firewall.py  test_kpi_history.py  test_kpis.py  test_llamacpp_pin.py  test_model_adapter.py  test_observability.py  test_proposed_edit.py  test_redaction.py  test_smoke.py  (+14 more)
(+304 files in other folders)
