[project]
name = "foundry-x"
version = "0.1.0"
description = "Self-improving agent harness foundry"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "sqlite-utils>=4.1.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "defusedxml>=0.7.1",
]

[project.scripts]
fx-runner = "foundry_x.execution.runner:main"
fx-trace = "foundry_x.observability.cli:main"
foundry-kpis = "foundry_x.observability.kpis:main"
foundry-trace = "foundry_x.trace.cli:main"
foundry-x-trace = "foundry_x.trace.cli:main"
foundry-evolve = "foundry_x.evolution.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry_x"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["benchmarks/fixtures"]

[tool.pytest.ini_options]
testpaths = ["tests", "benchmarks"]
pythonpath = ["."]
norecursedirs = ["benchmarks/fixtures"]
markers = [
    "benchmark: deterministic gatekeeping benchmark task (ADR-0004, ADR-0005)",
]
